2013-07-10  Ingo Feinerer <feinerer@logic.at>

	* R/reader.R (readPDF): Use tm:::pdfinfo() (which needs the pdfinfo
	command line tool) instead of tools:::pdf_info().

2013-04-11  Ingo Feinerer <feinerer@logic.at>

	* R/transform.R (removeWords): Use PCRE UCP to use Unicode properties
	to determine character types.

2012-12-14  Ingo Feinerer <feinerer@logic.at>

	* R/matrix.R (TermDocumentMatrix): Ensure dimnames of type character
	when generating a simple_triplet_matrix. Reported by Arho Suominen. 

2012-12-10  Ingo Feinerer <feinerer@logic.at>

	* man/tm_reduce.Rd: Document right to left folding order. Adapt
	example as well. Suggested by Mark Rosenstein.

2012-12-04  Ingo Feinerer <feinerer@logic.at>

	* R/filter.R (sFilter): Avoid attach() and simplify.

2012-11-02  Ingo Feinerer <feinerer@logic.at>

	* R/doc.R (.TextDocument): Use casts to ensure data types and to avoid
	removal of attributes.

2012-10-03 Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R (weightTfIdf, weightSMART): Gracefully handle empty
	columns and rows (avoids blow-up due to NaN values). Suggested by Jaap
	Frölich.

2012-07-27 Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removeWords): Allow longer stopword lists.

2012-01-31  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readXML): Readers can now set the document language
	themselves.

2012-01-14  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (XMLSource, getElem.XMLSource): Simplifications as
	proposed by Milan Bouchet-Valat.

2012-01-11  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (termFreq): Fix processing of user provided
	stopwords. Reported by Bettina Grün.

2011-12-23  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (termFreq): Fix invalid handling of
	control$wordLengths[1]. Reported by Steven C. Bagley.

2011-12-17  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION (Version): Prepare for CRAN Christmas release.

2011-12-12  Ingo Feinerer  <feinerer@logic.at>
